qualia_derive/tests/compile-fail/no-enums.rs
extern crate qualia_derive;
use qualia_derive::ObjectShape;

#[derive(ObjectShape)]
enum Foo {}

fn main() {}
