qualia_derive/tests/compile-fail/no-enums.stderr
error: can only derive ObjectShape on a struct
 --> $DIR/no-enums.rs:5:1
  |
5 | enum Foo {}
  | ^^^^
